org.mmisw.ontmd Ontology Metadata Manager
Carlos Rueda - MMI / MBARI

ChangeLog

2008-11-12

	- Done Request 46: allow to manually specify version of submitted ontology (internal)

	- Done 41: add cdip namespace, and others.
	  Ok, ontmd is using the following text file as external resources to get the authorities
	  and the resources types:
		    authorities.csv
		    resourcetypes.csv
	  See Config.java
	   
	
	Voc2RDF (2.0.0.beta2)
	Re. 43: Handle non-UTF8 inputs 
	- Voc2RDF: New _convertToUtf8(String str) utility in Converter.
	  FIXME implementation is rather simplistic:
	     return new String(str.getBytes(), "UTF-8"))
	  A better approach is to determine the actual original charset and
	  then do the conversion to UTF-8.
	  
	  
2008-11-11 (1.0.0.beta)    (Happy B-day Ini!)

	- Declaring beta status!
	
	- Using new Voc2RDF logo created by Paul (thanks!).


2008-11-10 (1.0.0.alpha7)
	- Fixed 38: show the "owl" and "html" links
	  --> include hot links in the read-only view of a registered ontology
	
2008-11-09 (1.0.0.alpha7)

	- Voc2RDF functionality re-merged in this project.

	- New tooltip handling via an "?" icon.
	
	- JenaUtil2: with some of the methods in JenaUtil but with some adjustments.
	  Initially intended to handle the fragment separator, which is '#' always in
	  the original version. Currently, JenaUtil2 still uses '#' but already
	  factors out this element so it's easier to test for a different fragment
	  separator, especifically, '/'.
	  Preliminary tests, show that the Jena library handles the '/' separator
	  differently than with '#'. For example, elements in the base namaspace are
	  nicely identified with relative references when '#' is used, but not
	  with '/'.  This may be just a cosmetic difference but I haven't tested
	  this thoroughly yet (especially in terms of transferring elements from a
	  given ontology to the new to be uploaded in the repository).
	  
	- Improved handling of the "_map" suffix in the shortName.
	
