@@ -3,8 +3,10 @@ package org.mmisw.ontmd.gwt.client.voc2rdf;
 import java.util.Map;
 
 import org.mmisw.ontmd.gwt.client.Main;
+import org.mmisw.ontmd.gwt.client.rpc.LoginResult;
 import org.mmisw.ontmd.gwt.client.voc2rdf.rpc.ConversionResult;
 
+import com.google.gwt.core.client.GWT;
 import com.google.gwt.user.client.ui.CellPanel;
 import com.google.gwt.user.client.ui.DecoratorPanel;
 import com.google.gwt.user.client.ui.FlexTable;
@@ -34,9 +36,32 @@ public class Voc2RdfMainPanel extends VerticalPanel {
 	private VocabPanel vocabPanel = new VocabPanel(this);
 	private ConversionPanel conversionPanel = new ConversionPanel(this);
 	
+	private LoginResult loginResult;
+	
 	
 	Voc2RdfMainPanel(final Map<String, String> params) {
 		super();
+		
+		///////////////////////////////////////////////////////////////////////////
+		// conveniences for testing in development environment
+		if ( ! GWT.isScript() ) {
+			
+			if ( true ) {    // true for auto-login
+				loginResult = new LoginResult();
+				loginResult.setSessionId("22222222222222222");
+				loginResult.setUserId("1002");
+				loginResult.setUserName("carueda");
+			}
+		}
+		
+		
+	    if ( loginResult == null && params.get("sessionId") != null && params.get("userId") != null ) {
+	    	loginResult = new LoginResult();
+	    	loginResult.setSessionId(params.get("sessionId"));
+	    	loginResult.setUserId(params.get("userId"));
+	    }
+
+		
 		
 		add(Main.images.voc2rdf2().createImage());
 		
@@ -75,18 +100,18 @@ public class Voc2RdfMainPanel extends VerticalPanel {
 	
 	void converting() {
 		conversionPanel.showProgressMessage("Converting. Please wait ...");
-		conversionPanel.updateForm(null);
+		conversionPanel.updateForm(null, null);
 	}
 	
 	void conversionError(String error) {
 		conversionPanel.setText(error);
-		conversionPanel.updateForm(null);
+		conversionPanel.updateForm(null, null);
 	}
 	
 	void conversionOk(ConversionResult conversionResult) {
 		tabPanel.selectTab(tabPanel.getWidgetIndex(conversionPanel));
 		conversionPanel.setText(conversionResult.getRdf());
-		conversionPanel.updateForm(conversionResult.getPathOnServer());
+		conversionPanel.updateForm(conversionResult.getPathOnServer(), loginResult);
 	}
 
 }
